# app/src/api/schema.ts
@@ -3,28 +3,29 @@
  * Do not make direct changes to the file.
  */
 
+
 export interface paths {
-  '/api/order': {
+  "/api/order": {
     /** Order a number of donuts */
-    post: operations['TechTestWeb.OrderController.index']
-  }
-  '/api/orders': {
+    post: operations["TechTestWeb.OrderController.index"];
+  };
+  "/api/orders": {
     /** Show the list of currently ordered donuts */
-    get: operations['TechTestWeb.OrderController.orders']
-  }
-  '/api/test': {
+    get: operations["TechTestWeb.OrderController.orders"];
+  };
+  "/api/test": {
     /** Test */
-    get: operations['TechTestWeb.TestController.index']
-  }
+    get: operations["TechTestWeb.TestController.index"];
+  };
 }
 
-export type webhooks = Record<string, never>
+export type webhooks = Record<string, never>;
 
 export interface components {
   schemas: {
     /**
-     * OrderParams
-     * @description Order Schema
+     * OrderParams 
+     * @description Order Schema 
      * @example {
      *   "name": "Jeff Daveson",
      *   "quantity": 72
@@ -32,23 +33,23 @@ export interface components {
      */
     OrderParams: {
       /** @description Name of the person ordering the donuts */
-      name: string
+      name: string;
       /** @description The number of donuts ordered */
-      quantity: number
-    }
+      quantity: number;
+    };
     /**
-     * OrderResponse
-     * @description Order response schema
+     * OrderResponse 
+     * @description Order response schema 
      * @example {
      *   "success": true
      * }
      */
     OrderResponse: {
-      success?: boolean
-    }
+      success?: boolean;
+    };
     /**
-     * OrdersResponse
-     * @description Test Response Schema
+     * OrdersResponse 
+     * @description Test Response Schema 
      * @example {
      *   "data": {
      *     "orders": [
@@ -62,26 +63,26 @@ export interface components {
      */
     OrdersResponse: {
       data?: {
-        orders?: {
-          name?: string
-          quantity?: number
-        }[]
-      }
-    }
+        orders?: ({
+            name?: string;
+            quantity?: number;
+          })[];
+      };
+    };
     /**
-     * Test
-     * @description Test Schema
+     * Test 
+     * @description Test Schema 
      * @example {
      *   "hello": "world"
      * }
      */
     Test: {
       /** @description Test Property (world) */
-      hello: string
-    }
+      hello: string;
+    };
     /**
-     * TestResponse
-     * @description Test Response Schema
+     * TestResponse 
+     * @description Test Response Schema 
      * @example {
      *   "data": {
      *     "hello": "world"
@@ -89,56 +90,58 @@ export interface components {
      * }
      */
     TestResponse: {
-      data?: components['schemas']['Test']
-    }
-  }
-  responses: {}
-  parameters: never
-  requestBodies: never
-  headers: never
-  pathItems: never
+      data?: components["schemas"]["Test"];
+    };
+  };
+  responses: {
+  };
+  parameters: never;
+  requestBodies: never;
+  headers: never;
+  pathItems: never;
 }
 
-export type external = Record<string, never>
+export type external = Record<string, never>;
 
 export interface operations {
-  'TechTestWeb.OrderController.index': {
+
+  "TechTestWeb.OrderController.index": {
     /** Order a number of donuts */
     /** @description Order params */
     requestBody?: {
       content: {
-        'application/json': components['schemas']['OrderParams']
-      }
-    }
+        "application/json": components["schemas"]["OrderParams"];
+      };
+    };
     responses: {
       /** @description Order */
       200: {
         content: {
-          'application/json': components['schemas']['OrderResponse']
-        }
-      }
-    }
-  }
-  'TechTestWeb.OrderController.orders': {
+          "application/json": components["schemas"]["OrderResponse"];
+        };
+      };
+    };
+  };
+  "TechTestWeb.OrderController.orders": {
     /** Show the list of currently ordered donuts */
     responses: {
       /** @description Order */
       200: {
         content: {
-          'application/json': components['schemas']['OrdersResponse']
-        }
-      }
-    }
-  }
-  'TechTestWeb.TestController.index': {
+          "application/json": components["schemas"]["OrdersResponse"];
+        };
+      };
+    };
+  };
+  "TechTestWeb.TestController.index": {
     /** Test */
     responses: {
       /** @description Test */
       200: {
         content: {
-          'application/json': components['schemas']['TestResponse']
-        }
-      }
-    }
-  }
+          "application/json": components["schemas"]["TestResponse"];
+        };
+      };
+    };
+  };
 }
